Major update. Use TreeView instead of GridView to display requirements, which are now organized in nested sets.

--- a/web/css/site.css
+++ b/web/css/site.css
@@ -185,3 +185,7 @@ thead > tr {
 .table-striped > tbody > tr:nth-of-type(2n) {
     background-color: white;
 }
+
+.kv-detail-container {
+    background: ghostwhite;
+}
