--- a/web/css/site.css
+++ b/web/css/site.css
@@ -12,7 +12,7 @@ body {
     padding: 0 0 60px;
 }
 
-.wrap > .container {
+.wrap > .container, .wrap > .container-fluid {
     padding: 70px 15px 20px;
 }
 
