--- a/web/css/site.css
+++ b/web/css/site.css
@@ -174,8 +174,9 @@ a.desc:after {
     height: 32px;
     text-align: center;
     vertical-align: middle;
-    font-size: 18pt;
+    font-size: 17pt;
     margin-right: 15px;
+    border-radius: 50%;
 }
 
 thead > tr {
