--- a/web/css/site.css
+++ b/web/css/site.css
@@ -1,8 +1,27 @@
 html,
 body {
     height: 100%;
-    background: #F4ECEB;
-    color: #332B2B;
+    background: #E6DFD5;
+    color: #6C5A52;
+    font-family: OpenSans,sans-serif;
+}
+
+.navbar {
+    background-color: #2F4349;
+}
+
+.navbar-header {
+    padding-left: 25px;
+}
+
+.navbar-inverse .navbar-brand {
+    color: #FFF8EF;
+    font-size: 30px;
+    font-family: Trebuchet MS;
+    font-style: italic;
+    background-image: url(/img/logo.png);
+    width: 99px;
+    height: 47px;
 }
 
 .wrap {
@@ -18,9 +37,10 @@ body {
 
 .footer {
     height: 60px;
-    background-color: #f5f5f5;
+    background-color: #D8D0C5;
     border-top: 1px solid #ddd;
     padding-top: 20px;
+    box-shadow: 0 3px 3px -3px black inset;
 }
 
 .jumbotron {
@@ -250,4 +270,12 @@ label {
     border: 1px solid #e0e0e0;
     background: white;
     padding: 5px;
+}
+
+.btn {
+    box-shadow: 0 3px 3px grey;
+}
+
+.no-shadow {
+    box-shadow: none;
 }
